--- a/JAVA/EE/SpringSecurity/WebappSpringSecurity/WebContent/health.html
+++ b/JAVA/EE/SpringSecurity/WebappSpringSecurity/WebContent/health.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Health Check</title>
 </head>
+<!-- 
+	我们希望在除HTML页面之外的所有页面中应用身份验证。 
+-->
 <body>
 	<h3>Service is up and running!!</h3>
 </body>
