--- a/JAVA/EE/Servlet/LoginExample/WebContent/login.html
+++ b/JAVA/EE/Servlet/LoginExample/WebContent/login.html
@@ -6,12 +6,10 @@
 </head>
 <body>
 
-<form action="LoginServlet" method="post">
-Username: <input type="text" name="user">
-<br>
-Password: <input type="password" name="pwd">
-<br>
-<input type="submit" value="Login">
-</form>
+	<form action="LoginServlet" method="post">
+		Username: <input type="text" name="user"> <br> Password:
+		<input type="password" name="pwd"> <br> <input
+			type="submit" value="Login">
+	</form>
 </body>
 </html>
